; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_mf.c_get_rtc_time_complete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_mf.c_get_rtc_time_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ce_msg_data = type { i32 }
%struct.rtc_time_data = type { i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.ce_msg_data*)* @get_rtc_time_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_rtc_time_complete(i8* %0, %struct.ce_msg_data* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.ce_msg_data*, align 8
  %5 = alloca %struct.rtc_time_data*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.ce_msg_data* %1, %struct.ce_msg_data** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.rtc_time_data*
  store %struct.rtc_time_data* %7, %struct.rtc_time_data** %5, align 8
  %8 = load %struct.rtc_time_data*, %struct.rtc_time_data** %5, align 8
  %9 = getelementptr inbounds %struct.rtc_time_data, %struct.rtc_time_data* %8, i32 0, i32 2
  %10 = load %struct.ce_msg_data*, %struct.ce_msg_data** %4, align 8
  %11 = call i32 @memcpy(i32* %9, %struct.ce_msg_data* %10, i32 4)
  %12 = load %struct.rtc_time_data*, %struct.rtc_time_data** %5, align 8
  %13 = getelementptr inbounds %struct.rtc_time_data, %struct.rtc_time_data* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.rtc_time_data*, %struct.rtc_time_data** %5, align 8
  %15 = getelementptr inbounds %struct.rtc_time_data, %struct.rtc_time_data* %14, i32 0, i32 0
  %16 = call i32 @complete(i32* %15)
  ret void
}

declare dso_local i32 @memcpy(i32*, %struct.ce_msg_data*, i32) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
